fix alignment of chat window

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -66,19 +66,14 @@ body {
 
 	}
 
-.chatList {
-	margin: 0px;
+.chatList .panel {
+	padding: 0px;
 }
 
 	.chatList .panel-body {
-		padding: 0px;
+		padding: 5px;
 	}
 
-.chatView {
-	padding: 0px;
-	margin: 0px;
+.chatView .panel-body {
+		padding: 0px;
 }
-
-	.chatView .panel-body {
-		padding: 0px;
-	}
